--- a/Memetic-Predictor.cabal
+++ b/Memetic-Predictor.cabal
@@ -16,13 +16,13 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     PredictorServer
-  build-depends:       base >= 4.7 && < 5
-                     , bytestring >= 0.10.8.1
-                     , filepath >= 1.4.1.1
-                     , http-types >= 0.9.1
-                     , process >= 1.4.3.0
+  build-depends:       base
+                     , bytestring
+                     , filepath
+                     , http-types
+                     , process
                      , text
-                     , unix >= 2.7.2.1
+                     , unix
                      , unordered-containers
                      , wai
                      , warp
