--- a/Memetic-Predictor.cabal
+++ b/Memetic-Predictor.cabal
@@ -43,6 +43,19 @@ executable Memetic-Predictor-Server
                      , unix >= 2.7.2.1
   default-language:    Haskell2010
 
+executable Memetic-Predictor-Mock
+  hs-source-dirs:      app
+  main-is:             Mock.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       Memetic-Predictor
+                     , base
+                     , bytestring >= 0.10.8.1
+                     , filepath >= 1.4.1.1
+                     , http-types >= 0.9.1
+                     , process >= 1.4.3.0
+                     , unix >= 2.7.2.1
+  default-language:    Haskell2010
+
 test-suite Memetic-Predictor-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
